# parquet-rcli

./: .gitignore  Cargo.toml  README.md
src/: inspector.rs  json.rs  lib.rs  main.rs  modifier.rs
testdata/: spark-top100.parquet
