[package]
name = "parquet-rcli"
version = "0.1.0"
edition = "2021"
authors = ["Enochack <caojianghe@hotmail.com>"]

[[bin]]
name = "parquet-rcli"
path = "src/main.rs"

[dependencies]
arrow = { version = "49.0.0", features = ["prettyprint"] }
bytes = "1.5.0"
clap = { version = "4.4.10", features = ["derive"] }
comfy-table = "7.1.0"
futures = "0.3.29"
indexmap = "2.1.0"
parquet = { version = "49.0.0", features = ["async", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" , features = ["preserve_order"]}
tokio = { version = "1.34.0", features = ["macros", "rt", "fs", "io-util", "io-std"] }
